@@ -35,6 +35,7 @@ enum lla_plugin_id_e {
 	LLA_PLUGIN_OPEN,
 	LLA_PLUGIN_SANDNET,
 	LLA_PLUGIN_STAGEPROFI,
+	LLA_PLUGIN_PATHPORT,
 	LLA_PLUGIN_LAST
 };
 
