@@ -1,3 +1,8 @@
+1/1/2007 lla-0.2.1
+
+	Added support for the Stage Profi widget
+	Added Pathport support
+
 1/1/2007 lla-0.2.0
 
 	Added Sandnet Support
