@@ -1,4 +1,8 @@
-1/1/207 Simon Newton <<nomis52@westnet.com.au>
+13/1/2007 Simon Newton <<nomis52@westnet.com.au>
+
+	* Added a plugin for the Stage Profi USB Device
+
+1/1/2007 Simon Newton <<nomis52@westnet.com.au>
 
 	* fixed the problem on the USB Pro when changing modes
 
